@@ -28,6 +28,7 @@ Morten:
 	* Allow plain space as 1000s separator in FR locale.
 	* Fix graph size problem affecting image output.  [#507]
 	* Check for yelp in autogen.  [#558]
+	* Fix ssconvert problem with conditional styles.
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.48
